--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
 			<div class="tenpixels greenbox"></div>
 			<div class="tenpixels greenbox"></div>
 		</div>
-		<script src="numberedLog.js"></script>
-		<!--<script src="actors.js"></script>-->
-		<script src="index.js"></script>
-		<script src="actor.js"></script>
+		<script src="homework1.js"></script>
 	</body>
 </html>
